--- a/GLSLBase/GLSLBase.vcxproj
+++ b/GLSLBase/GLSLBase.vcxproj
@@ -173,10 +173,12 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\FSGridMeshShader.fs" />
     <None Include="Shaders\FSSandBox.fs" />
     <None Include="Shaders\FSSandBox.vs" />
     <None Include="Shaders\SolidRect.fs" />
     <None Include="Shaders\SolidRect.vs" />
+    <None Include="Shaders\VSGridMeshShader.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
