--- a/GLSLBase/GLSLBase.vcxproj.filters
+++ b/GLSLBase/GLSLBase.vcxproj.filters
@@ -41,6 +41,12 @@
     <None Include="Shaders\FSSandBox.vs">
       <Filter>Shader</Filter>
     </None>
+    <None Include="Shaders\FSGridMeshShader.fs">
+      <Filter>Shader</Filter>
+    </None>
+    <None Include="Shaders\VSGridMeshShader.vs">
+      <Filter>Shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
